--- a/source/sass/blocks/featured.scss
+++ b/source/sass/blocks/featured.scss
@@ -25,7 +25,7 @@
   color: #444444;
   font-weight: 400;
   letter-spacing: -0.7px;
-  margin: 25px 0;
+  margin: 15px 0;
   padding-right: 30px;
 }
 
@@ -44,11 +44,11 @@
 }
 
 .featured__basket-image {
-  margin-top: 28px;
+  margin-top: 25px;
 }
 
 .featured__price {
-  margin: 25px 0;
+  margin: 18px 0;
   font-size: 17px;
   line-height: 24px;
   font-weight: bold;
@@ -57,6 +57,7 @@
 }
 
 .featured__to-order {
+  margin-top: 8px;
   font-size: 17px;
   line-height: 20px;
   font-weight: bold;
@@ -72,7 +73,7 @@
 
 @media (min-width: 768px) {
   .featured {
-    margin-top: 35px;
+    margin-top: 57px;
     padding: 0 50px;
     padding-bottom: 40px;
     border-bottom: 2px solid #f1f1f1;
@@ -81,7 +82,6 @@
 
   .featured__title {
     margin: 0;
-    padding-right: 50px;
     font-size: 43px;
     line-height: 50px;
     letter-spacing: -1.5px;
@@ -91,17 +91,25 @@
   .featured__span {
     display: inline-block;
     width: 70px;
-    margin-left: 105px;
+    margin-left: 130px;
     text-align: center;
     vertical-align: middle;
   }
 
   .featured__text {
-    width: 230px;
+    width: 280px;
+    line-height: 29px;
+    margin-top: 50px;
+    letter-spacing: 1px;
   }
 
   .featured__table {
     width: 300px;
+    margin-top: 35px;
+  }
+
+  .featured__col:nth-child(2n) {
+    padding-left: 0;
   }
 
   .featured__basket-image {
@@ -109,19 +117,20 @@
     width: 333px;
     height: 404px;
     margin: 0;
-    top: 80px;
+    top: 105px;
     right: 50px;
   }
 
   .featured__price {
     width: 300px;
     font-size: 20px;
-    margin: 40px 0;
+    margin: 0;
+    margin-top: 50px;
   }
 
   .featured__to-order {
-    width: 300px;
-    margin-top: 20px;
+    width: 287px;
+    margin-top: 33px;
   }
 }
 
