--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -1,7 +1,7 @@
 .main-footer {
   padding: 0 30px;
   background-color: #f1f1f1;
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .main-footer__list {
@@ -12,22 +12,24 @@
   border: 1px solid #f1f1f1;
 }
 
-.main-footer__item:nth-child(1) {
+/*.main-footer__item:nth-child(1) {
   border-bottom: 1px solid #e5e5e5;
-}
+}*/
 
 .main-footer__link {
   text-decoration: none;
   display: inline-block;
-  padding: 20px;
+  padding: 20px 15px;
+  //padding-left: 15px;
+  //padding-right: 15px;
   vertical-align: middle;
   color: #000000;
 }
 
 .main-footer__copyright {
   margin: 0;
-  padding-top: 20px;
-  padding-bottom: 28px;
+  //padding-top: 20px;
+  //padding-bottom: 28px;
   font-size: 19px;
   line-height: 38px;
   font-weight: bold;
@@ -45,12 +47,37 @@
 @media (min-width: 768px) {
   .main-footer {
     padding: 0 50px;
+    margin-top: 57px;
   }
 
   .main-footer__list {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    min-height: 143px;
+    align-items: center;
+  }
+
+  .main-footer__item {
+    align-items: center;
+    width: 256px;
+  }
+
+  .main-footer__logo {
+    text-align: left;
+  }
+
+  .main-footer__socials {
+    display: flex;
+    justify-content: space-evenly;
+  }
+
+  .main-footer__copyright {
+    text-align: right;
+  }
+
+  .main-footer__link {
+    padding: 0;
   }
 
   .main-footer__logo--display {
