--- a/source/sass/blocks/site-choice.scss
+++ b/source/sass/blocks/site-choice.scss
@@ -2,36 +2,59 @@
   list-style-type: none;
   padding: 0;
   margin: 0;
+  margin-top: -5px;
   background-color: #fafafa;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 0;
+}
+
+.site-choice__item {
+  min-height: 105px;
+  display: flex;
+  box-sizing: border-box;
+  position: relative;
+
+  &:hover {
+    //min-height: 105px;
+  }
 }
 
 .site-choice__interior {
   background-color: #63d1bb;
   background-image: url("../img/icon-interior.svg");
   background-repeat: no-repeat;
-  background-position: 230px 20px;
+  background-position: 257px 29px;
 }
 
 .site-choice__toys {
   background-color: #56c3b2;
   background-image: url("../img/icon-toy.svg");
   background-repeat: no-repeat;
-  background-position: 220px 20px;
+  background-position: 240px 29px;
 }
 
 .site-choice__link {
+  position: absolute;
   color: #ffffff;
   font-size: 19px;
-  line-height: 24px;
+  line-height: 30px;
   font-weight: bold;
   text-decoration: none;
   display: inline-block;
   width: 100%;
   box-sizing: border-box;
-  padding: 28px 0;
+  padding-top: 25px;
+  padding-bottom: 28px;
   padding-left: 30px;
   padding-right: 130px;
+
+  &:hover {
+    padding-top: 33px;
+    transform: translateY(-10px);
+  }
 }
+
 
 @media (min-width: 768px) {
   .site-choice {
