--- a/source/sass/common/fonts.scss
+++ b/source/sass/common/fonts.scss
@@ -1,4 +1,13 @@
 @font-face {
-  font-family: "Open Sans", sans-serif;
-  src: url("https://fonts.googleapis.com/css?family=Open+Sans:400,700&amp;subset=cyrillic");
+  font-weight: normal;
+  font-family: "Open Sans";
+  font-style: normal;
+  src: url("../../fonts/opensans.woff2") format("woff2"), url("../../fonts/opensans.woff") format("woff");
+}
+
+@font-face {
+  font-weight: bold;
+  font-family: "Open Sans";
+  font-style: normal;
+  src: url("../../fonts/opensansbold.woff2") format("woff2"), url("../../fonts/opensansbold.woff") format("woff");
 }
