--- a/source/sass/blocks/catalog-title.scss
+++ b/source/sass/blocks/catalog-title.scss
@@ -1,6 +1,7 @@
 .catalog-title {
   margin: 0;
-  padding: 70px 0;
+  padding-top: 70px;
+  padding-bottom: 77px;
   text-align: center;
   background-color: #f1f1f1;
   font-size: 27px;
@@ -12,6 +13,6 @@
   .catalog-title {
     font-size: 43px;
     line-height: 50px;
-    padding: 50px 0;
+    padding-top: 32px;
   }
 }
