--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -1,7 +1,8 @@
 .main-footer {
   padding: 0 30px;
   background-color: #f1f1f1;
-  margin-top: 40px;
+  margin-top: 50px;
+  padding-top: 4px;
 }
 
 .main-footer__list {
@@ -47,7 +48,7 @@
 @media (min-width: 768px) {
   .main-footer {
     padding: 0 50px;
-    margin-top: 57px;
+    margin-top: 100px;
   }
 
   .main-footer__list {
@@ -82,5 +83,11 @@
 
   .main-footer__logo--display {
     display: block;
+  }
+}
+
+@media (min-width: 768px) {
+  .main-footer {
+    padding: 0 100px;
   }
 }
