Переделал всю форму переосмыслив БЭМ

--- a/source/sass/blocks/catalog-title.scss
+++ b/source/sass/blocks/catalog-title.scss
@@ -16,3 +16,11 @@
     padding-top: 32px;
   }
 }
+
+@media (min-width: 1250px) {
+  .catalog-title {
+    font-size: 53px;
+    line-height: 57px;
+    padding-top: 30px;
+  }
+}
