--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -11,7 +11,8 @@
 @import "../sass/blocks/catalog-title.scss";
 @import "../sass/blocks/catalog.scss";
 @import "../sass/blocks/form-title.scss";
-@import "../sass/blocks/form.scss";
+//@import "../sass/blocks/form.scss";
+@import "../sass/blocks/form2.scss";
 @import "../sass/blocks/map.scss";
 @import "../sass/blocks/site-title.scss";
 @import "../sass/blocks/site-choice.scss";
