--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -1,14 +1,18 @@
 .catalog {
+  margin-top: 27px;
   padding: 0 30px;
   display: flex;
   flex-direction: column;
 }
 
 .catalog__item {
-  margin-top: 30px;
+  //margin-top: 27px;
   border: 1px solid #ececec;
-  padding-bottom: 28px;
-  //margin-bottom: 30px;
+  padding-bottom: 23px;
+}
+
+.catalog__item--mobile {
+  margin-top: 36px;
 }
 
 .catalog__image {
@@ -44,8 +48,8 @@
 .catalog__description {
   margin: 0;
   margin-top: 5px;
-  padding-bottom: 30px;
-  width: 93%;
+  //padding-bottom: 30px;
+  width: 100%;
   font-size: 13px;
   line-height: 30px;
   color: #828282;
@@ -53,11 +57,11 @@
 }
 
 .catalog__price-wrapper {
-  margin-top: 10px;
+  margin-top: 40px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  align-items: center;
+  align-items: baseline;
 }
 
 .catalog__price {
@@ -70,7 +74,7 @@
 }
 
 .catalog__films {
-  margin-top: 40px;
+  margin-top: 30px;
   border: 1px solid #000000;
   width: 100%;
   display: flex;
@@ -131,7 +135,7 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
+  width: 350px;
   padding: 12px 35px;
 
   &--order {
@@ -139,18 +143,35 @@
   }
 
   .catalog__title {
-    width: 130px;
+    width: 170px;
+    padding-left: 20px;
+    padding-top: 10px;
   }
 }
 
 @media (min-width: 768px) {
   .catalog {
-    margin-top: 51px;
+    margin-top: 35px;
     padding: 0 50px;
   }
 
+  .catalog__title {
+    font-size: 20px;
+    line-height: 24px;
+  }
+
   .catalog__films {
-    flex-direction: column;
+    //flex-direction: column;
+    display: block;
+  }
+
+  .catalog__price {
+    font-size: 17px;
+    line-height: 24px;
+  }
+
+  .catalog__price-wrapper {
+    margin-top: 195px;
   }
 
 
@@ -161,6 +182,16 @@
   .catalog__image {
     width: 330px;
     height: 335px;
+  }
+
+  .catalog__film-svg-title {
+    width: 350px;
+    margin-top: 18px;
+  }
+
+  .catalog__text {
+    font-size: 15px;
+    line-height: 27px;
   }
 
   .catalog__films-description {
@@ -193,22 +224,91 @@
     top: 40%;
     left: 44%;
   }
+
+  .catalog__to-order {
+    margin-top: 10px;
+    width: 580px;
+    margin-left: 40px;
+  }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 1250px) {
   .catalog {
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
+    margin-top: 125px;
+    //margin-left: 15px;
   }
 
   .catalog__item {
     flex-direction: column;
+    width: 315px;
+    min-height: 660px;
+    margin-left: 15px;
+  }
+
+  .catalog__image {
+    width: 315px;
+    min-height: 462px;
   }
 
   .catalog__films {
-    display: flex;
-    flex-direction: row;
+    margin-top: 55px;
+  }
+
+  .catalog__title {
+    font-size: 20px;
+    line-height: 24px;
+    width: 270px;
+  }
+
+  .catalog__price-wrapper {
+    margin-top: 60px;
+  }
+
+  .catalog__price-wrapper--margin {
+    margin-top: 35px;
+  }
+
+  .catalog__price {
+    font-size: 17px;
+    line-height: 24px;
+    letter-spacing: 0;
+    //margin-top: 20px;
+    //margin-left: 10px;
+  }
+
+  .catalog__to-order {
+    margin-left: 83px;
+    margin-top: 18px;
+    width: 225px;
+  }
+
+  .catalog__films {
+    display: block;
+  }
+
+  .catalog__film-svg-title {
+    width: 200px;
+    padding: 0;
+    position: relative;
+    padding-left: 85px;
+    margin-top: 95px;
+  }
+
+  .catalog__film-svg-icon {
+    position: absolute;
+    top: -55px;
+  }
+
+  .catalog__text {
+    width: 255px;
+    float: left;
+    margin-top: 15px;
+    margin-left: 53px;
+    font-size: 15px;
+    line-height: 30px;
   }
 
   .catalog__films-description {
@@ -219,5 +319,7 @@
     width: 680px;
     min-height: 455px;
     background-image: url("../../img/video-desktop.jpg");
+    margin-left: 50px;
+    float: left;
   }
 }
