--- a/source/sass/blocks/form-title.scss
+++ b/source/sass/blocks/form-title.scss
@@ -5,14 +5,26 @@
   font-weight: bold;
   letter-spacing: -0.5px;
   text-align: center;
-  padding: 73px 25px;
+  padding: 70px 25px;
+  margin: 0;
 }
 
 @media (min-width: 768px) {
   .form-title {
     margin: 0;
-    padding: 50px 0;
+    //padding: 50px 0;
+    padding-top: 30px;
+    padding-bottom: 65px;
     font-size: 43px;
     line-height: 50px;
+  }
+}
+
+@media (min-width: 1250px) {
+  .form-title {
+    font-size: 53px;
+    line-height: 57px;
+    padding-top: 32px;
+    padding-bottom: 80px;
   }
 }
