--- a/source/sass/blocks/main-footer.scss
+++ b/source/sass/blocks/main-footer.scss
@@ -1,7 +1,7 @@
 .main-footer {
   padding: 0 30px;
   background-color: #f1f1f1;
-  margin-top: 50px;
+  margin-top: 55px;
   padding-top: 4px;
 }
 
@@ -47,8 +47,9 @@
 
 @media (min-width: 768px) {
   .main-footer {
-    padding: 0 50px;
-    margin-top: 100px;
+    padding: 0 45px;
+    margin-top: 52px;
+    padding: 0 60px;
   }
 
   .main-footer__list {
@@ -86,8 +87,30 @@
   }
 }
 
-@media (min-width: 768px) {
+@media (min-width: 1250px) {
   .main-footer {
-    padding: 0 100px;
+    margin-top: 50px;
+  }
+
+  .main-footer__item {
+    width: 200px;
+    //margin-right: 10px;
+  }
+
+  .main-footer__item--logo {
+    margin-left: 50px;
+  }
+
+  .main-footer__socials {
+    margin-left: 30px;
+  }
+
+  .main-footer__item--copyright {
+    width: 250px;
+    margin-right: 30px;
+
+  img {
+    margin-left: 20px;
+  }
   }
 }
