--- a/source/sass/blocks/map.scss
+++ b/source/sass/blocks/map.scss
@@ -1,5 +1,21 @@
+.map {
+  margin-top: 37px;
+  text-align: center;
+}
+
 .map__iframe {
   width: 100%;
   height: 460px;
   border: none;
+}
+
+
+@media (min-width: 1250px) {
+  .map {
+    width: 525px;
+    height: 460px;
+    float: right;
+    margin-right: 100px;
+    margin-top: 75px;
+  }
 }
