--- a/source/sass/blocks/site-choice.scss
+++ b/source/sass/blocks/site-choice.scss
@@ -14,9 +14,14 @@
   display: flex;
   box-sizing: border-box;
   position: relative;
+  transition: 0.4s;
 
   &:hover {
-    //min-height: 105px;
+    transform: translateY(-5px) scaleY(1.1);
+
+    .site-choice__link {
+      //transform: translateY(-5px)
+    }
   }
 }
 
@@ -61,6 +66,7 @@
     display: flex;
     flex-direction: row;
     padding: 0 50px;
+    margin-top: 5px;
   }
 
   .site-choice__item {
@@ -71,6 +77,7 @@
 @media (min-width: 1250px) {
   .site-choice {
     padding: 0 100px;
+    margin-top: -5px;
   }
 
   .site-choice__item {
