--- a/source/sass/blocks/site-wrapper.scss
+++ b/source/sass/blocks/site-wrapper.scss
@@ -5,14 +5,30 @@
   box-sizing: border-box;
 }
 
+.site__write--wrapper {
+  padding: 0 30px;
+}
+
 @media (min-width: 768px) {
   .site-wrapper {
     width: 768px;
+  }
+
+  .site__write--wrapper {
+    margin-top: 70px;
   }
 }
 
 @media (min-width: 1250px) {
   .site-wrapper {
     width: 1250px;
+  }
+
+
+  .site__write--wrapper {
+    margin-top: 115px;
+    width: 200px;
+    margin-left: 245px;
+
   }
 }
