--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -8,7 +8,7 @@
 .catalog__item {
   //margin-top: 27px;
   border: 1px solid #ececec;
-  padding-bottom: 23px;
+  //padding-bottom: 23px;
 }
 
 .catalog__item--mobile {
@@ -18,6 +18,7 @@
 .catalog__image {
   width: 260px;
   height: 195px;
+  background-color: #ecebe9;
 }
 
 .catalog__hare {
@@ -35,6 +36,7 @@
 .catalog-wrapper {
   margin-top: 26px;
   padding: 0 28px;
+  padding-bottom: 22px;
 }
 
 .catalog__title {
@@ -74,8 +76,8 @@
 }
 
 .catalog__films {
-  margin-top: 30px;
-  border: 1px solid #000000;
+  margin-top: 60px;
+  //border: 1px solid #000000;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -110,7 +112,7 @@
   margin: 0;
   font-size: 13px;
   line-height: 24px;
-  padding: 20px 30px;
+  padding: 28px 30px;
   padding-bottom: 25px;
   letter-spacing: 0.6px;
 }
@@ -136,7 +138,9 @@
   justify-content: space-between;
   align-items: center;
   width: 350px;
-  padding: 12px 35px;
+  //padding: 12px 35px;
+  align-items: center;
+  margin-left: 33px;
 
   &--order {
     order: -1;
@@ -144,8 +148,6 @@
 
   .catalog__title {
     width: 170px;
-    padding-left: 20px;
-    padding-top: 10px;
   }
 }
 
@@ -172,11 +174,23 @@
 
   .catalog__price-wrapper {
     margin-top: 195px;
+    display: flex;
+    justify-content: space-between;
+    width: 280px;
+  }
+
+  .catalog__price-wrapper--margin {
+    margin-top: 173px;
   }
 
 
   .catalog__item {
     display: flex;
+    margin-top: 52px;
+  }
+
+  .catalog__item--hare {
+    margin-top: 45px;
   }
 
   .catalog__image {
@@ -186,7 +200,11 @@
 
   .catalog__film-svg-title {
     width: 350px;
-    margin-top: 18px;
+    margin-top: 22px;
+
+    .catalog__title--width {
+      width: 270px;
+    }
   }
 
   .catalog__text {
@@ -234,33 +252,49 @@
 
 @media (min-width: 1250px) {
   .catalog {
+    width: 1150px;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-content: space-around;
-    margin-top: 125px;
-    //margin-left: 15px;
+    //justify-content: space-around;
+    justify-content: space-between;
+    margin-top: 155px;
+    padding: 0 50px;
+    box-sizing: border-box;
   }
 
   .catalog__item {
     flex-direction: column;
     width: 315px;
     min-height: 660px;
-    margin-left: 15px;
+    //margin-left: 15px;
+    margin-top: 0;
   }
 
   .catalog__image {
     width: 315px;
     min-height: 462px;
+    background-repeat: no-repeat;
+    background-position: 0 35px;
+    background-size: 315px 380px;
+  }
+
+  .catalog__hare {
+    background-position: -41px 30px;
+    background-size: 385px 390px;
+  }
+
+  .catalog__basket {
+    background-position: -20px 10px;
+    background-size: 450px 450px;
+  }
+
+  .catalog__big-basket {
+    background-position: -13px 0px;
+    background-size: 435px 430px;
   }
 
   .catalog__films {
     margin-top: 55px;
-  }
-
-  .catalog__title {
-    font-size: 20px;
-    line-height: 24px;
-    width: 270px;
   }
 
   .catalog__price-wrapper {
@@ -275,8 +309,6 @@
     font-size: 17px;
     line-height: 24px;
     letter-spacing: 0;
-    //margin-top: 20px;
-    //margin-left: 10px;
   }
 
   .catalog__to-order {
@@ -293,8 +325,14 @@
     width: 200px;
     padding: 0;
     position: relative;
-    padding-left: 85px;
+    padding-left: 80px;
     margin-top: 95px;
+
+    .catalog__title {
+      font-size: 20px;
+      line-height: 24px;
+      padding: 0;
+    }
   }
 
   .catalog__film-svg-icon {
@@ -319,7 +357,15 @@
     width: 680px;
     min-height: 455px;
     background-image: url("../../img/video-desktop.jpg");
-    margin-left: 50px;
+    background-position: -50px -20px;
+    background-size: 740px 480px;
+    //margin-left: 50px;
     float: left;
+    margin: 0;
+  }
+
+  .catalog__movie-play {
+    top: 41%;
+    left: 43%;
   }
 }
