Завершил работу по 5 модулю

--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -261,10 +261,6 @@ input[type="radio"]:checked + .indicator {
     padding: 0 20px;
   }
 
-  .form-wrapper {
-    //margin-top: 50px;
-  }
-
   .form__label-wrapper--type {
     //margin-left: 100px;
     margin-top: 0;
@@ -476,11 +472,9 @@ input[type="radio"]:checked + .indicator {
     margin-right: 120px;
   }
 
-  .form-wrapper {
-    //padding: 0 100px;
+  /*.form-wrapper {
     margin-top: 145px;
-
-  }
+  }*/
 
   .form__type {
     padding: 0 150px;
