--- a/source/sass/blocks/catalog.scss
+++ b/source/sass/blocks/catalog.scss
@@ -284,7 +284,7 @@
   }
 
   .catalog__big-basket {
-    background-position: -13px 0px;
+    background-position: -13px 0;
     background-size: 435px 430px;
   }
 
