--- a/source/sass/blocks/site-title.scss
+++ b/source/sass/blocks/site-title.scss
@@ -31,13 +31,12 @@
 }
 
 @media (min-width: 1250px) {
-
   .site-title {
     background-position: center -64px;
     font-size: 53px;
     line-height: 57px;
     padding-top: 90px;
-    letter-spacing: 0px;
+    letter-spacing: 0;
 
     .site-title__text {
       width: 700px;
